--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simpledevtools",
+  "name": "SimpleDevTools",
   "version": "1.0.0",
   "type": "module",
   "description": "SimpleDevTools - A collection of useful developer tools in one place",
